--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,10 @@ jobs:
         set -eux
         python -m pip install .[test]
 
+        pytest -vv -r ap --cov kore_extension
+        jupyter server extension list
+        jupyter server extension list 2>&1 | grep -ie "kore_extension.*OK"
+
         jupyter labextension list
         jupyter labextension list 2>&1 | grep -ie "kore_extension.*OK"
         python -m jupyterlab.browser_check
@@ -81,6 +85,9 @@ jobs:
 
         pip install "jupyterlab>=4.0.0,<5" kore_extension*.whl
 
+
+        jupyter server extension list
+        jupyter server extension list 2>&1 | grep -ie "kore_extension.*OK"
 
         jupyter labextension list
         jupyter labextension list 2>&1 | grep -ie "kore_extension.*OK"
