--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "jupyterlab",
         "jupyterlab-extension"
     ],
-    "homepage": " ",
+    "homepage": "https://github.fh-zwickau.de/marckre/KoreExtension",
     "bugs": {
-        "url": " /issues"
+        "url": "https://github.fh-zwickau.de/marckre/KoreExtension/issues"
     },
     "license": "BSD-3-Clause",
     "author": {
@@ -58,6 +58,8 @@
     },
     "dependencies": {
         "@jupyterlab/application": "^4.0.0",
+        "@jupyterlab/coreutils": "^6.0.0",
+        "@jupyterlab/services": "^7.0.0",
         "@jupyterlab/settingregistry": "^4.0.0"
     },
     "devDependencies": {
@@ -74,6 +76,7 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
         "jest": "^29.2.0",
+        "mkdirp": "^1.0.3",
         "npm-run-all": "^4.1.5",
         "prettier": "^3.0.0",
         "rimraf": "^5.0.1",
@@ -96,6 +99,16 @@
         "access": "public"
     },
     "jupyterlab": {
+        "discovery": {
+            "server": {
+                "managers": [
+                    "pip"
+                ],
+                "base": {
+                    "name": "kore_extension"
+                }
+            }
+        },
         "extension": true,
         "outputDir": "kore_extension/labextension",
         "schemaDir": "schema"
