--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -6,10 +6,10 @@ author_name: Marcus Wittig
 has_binder: false
 has_settings: true
 kind: server
-labextension_name: kore_extension
+labextension_name: kore-extension
 project_short_description: A JupyterLab extension to expand the eponymous service
     for course management and grade handling between LMS and JupyterHub via LTI 1.3.
 python_name: kore_extension
-repository: https://github.fh-zwickau.de/marckre/KoreExtension
+repository: ''
 test: true
 
