--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         jupyter server extension list 2>&1 | grep -ie "kore_extension.*OK"
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "kore_extension.*OK"
+        jupyter labextension list 2>&1 | grep -ie "kore-extension.*OK"
         python -m jupyterlab.browser_check
 
     - name: Package the extension
@@ -90,7 +90,7 @@ jobs:
         jupyter server extension list 2>&1 | grep -ie "kore_extension.*OK"
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "kore_extension.*OK"
+        jupyter labextension list 2>&1 | grep -ie "kore-extension.*OK"
         python -m jupyterlab.browser_check --no-browser-test
 
   integration-tests:
